@@ -111,12 +111,20 @@ window.playfair = (function () {
 		xmaxis=[]
 		ymaxis=[]
 
-		for(var i=0;i<xaxis.length;i++){
-			xmaxis.push(xaxis[i].replace(/[^0-9\.\-]+/g, ''))
+		if(Object.prototype.toString.call(xaxis[0])==='[object Date]'){
+			xmaxis=xaxis
+		} else{
+			for(var i=0;i<xaxis.length;i++){
+				xmaxis.push(xaxis[i].replace(/[^0-9\.\-]+/g, ''))
+			}
 		}
 
-		for(var i=0;i<yaxis.length;i++){
-			ymaxis.push(yaxis[i].replace(/[^0-9\.\-]+/g, ''))
+		if(Object.prototype.toString.call(yaxis[0])==='[object Date]'){
+			ymaxis=yaxis
+		} else{
+			for(var i=0;i<yaxis.length;i++){
+				ymaxis.push(yaxis[i].replace(/[^0-9\.\-]+/g, ''))
+			}
 		}
 
 		console.log('math axes: ',xmaxis,ymaxis)
@@ -751,134 +759,256 @@ function create_axis(dataseries,parameters) {
 		if(dataseries[i]>maxdata){maxdata=dataseries[i]}
 	}
 
-	if(mindata>0 && mustincludezero==1) {
-		mindata=0
-	}
+	if (Object.prototype.toString.call(dataseries[0])==='[object Date]'){
+		// figure out what magnitude the range is - should we measure in years, months, or days?
+		var daylength=86400000
+		var monthlength=2628288000
+		var yearlength=31536000000
 
-	if(mindata<=0 && maxdata>=0){
-		zero_flag=1
-	}
+		range=maxdata-mindata
 
-	range=maxdata-mindata
-	nice_ticks=[.1,.2,.5,1,.15,.25,.75]
+		if (mustincludezero==1){
+			console.log("Date variable type doesn't make sense for this axis.")
+			return []
+		}
 
-	// This is sort of a brute force method for finding a good division of the graph.
-	// First, generate a big list of candidate step values, make an axis for each one,
-	// and evaluate that axis by the amount of 'wasted space' it has. Give preference
-	// to nice numbers of ticks (I prefer about 5 but this can be set) - larger numbers
-	// of ticks will generally have an advantage is reducing wasted space, so penalize
-	// them by some arbitrary amount (another setting). Some of the candidate step
-	// numbers are gonna be garbage but hey, computation is cheap.
+		// if the range is more than 4 years, then the axis should be denominated in years
+		if (range>=yearlength*4){
+			drange=maxdata.getUTCFullYear()-mindata.getUTCFullYear()
+			digits=drange.toString().length
+			candidate_arrays=[]
+			candidate_steps=[]
+			nice_ticks=[.1,.2,.3,.4,.5,.6,.7,.8,.9,1]
 
-	// The procedure is different if range <1 or >1 so these are handled separately.
-	console.log('range: ',range,'ticks: ',ticks,'maxdata: ',maxdata,'mindata: ',mindata)
-	if ((range/(ticks-1))>=0){
-	    steps=range/(ticks-1)
-	    
-	    if(steps>=1){
-		    rounded=Math.round(steps)
-		    digits=rounded.toString().length
-	    } else {
-	    	places=steps.toString().split('.')[1]
-	    	first_place=0
-	    	for(var i=0;i<places.length;i++){
-	    		if (places[i]!='0' && first_place==0){
-	    			first_place=i
-	    		}
-	    	}
+		    for (var i=0;i<nice_ticks.length;i++){
+				if(nice_ticks[i]*Math.pow(10,digits)>=1){candidate_steps.push(nice_ticks[i]*Math.pow(10,digits))}
+				if(nice_ticks[i]*Math.pow(10,digits-1)>=1){candidate_steps.push(nice_ticks[i]*Math.pow(10,digits-1))}
+				if(nice_ticks[i]*Math.pow(10,digits+1)>=1){candidate_steps.push(nice_ticks[i]*Math.pow(10,digits+1))}
+		    }
 
-	    	digits=-parseInt(first_place)
-	    }
-
-	    candidate_steps={0:[],1:[],2:[],3:[],4:[],5:[],6:[],7:[],8:[],9:[],10:[]}
-	    candidate_arrays=[]
-
-	    // generate the candidate steps
-	    // this whole candidate_steps[5] thing is all about knowing where to truncate
-	    // numbers that have no exact binary representation. This seems like an incredibly
-	    // stupid way to do it and there must be another way but I'm not sure what it is.
-
-	    for (var i=0;i<nice_ticks.length;i++){
-	    	if (i<4){digit_mod=digits+1}else{digit_mod=digits}
-	    	if(digits>=3){
-				candidate_steps[0].push(nice_ticks[i]*Math.pow(10,digits))
-				candidate_steps[0].push(nice_ticks[i]*Math.pow(10,digits-1))
-				candidate_steps[0].push(nice_ticks[i]*Math.pow(10,digits+1))
-	    	}
-	    	if(digits==2){
-				candidate_steps[0].push(nice_ticks[i]*Math.pow(10,digits))
-				try{candidate_steps[digit_mod-1].push(nice_ticks[i]*Math.pow(10,digits-1))}catch(err){candidate_steps[0].push(nice_ticks[i]*Math.pow(10,digits-1))}
-				candidate_steps[0].push(nice_ticks[i]*Math.pow(10,digits+1))
-	    	}
-	    	if(digits<2){
-				try{candidate_steps[2-digit_mod].push(nice_ticks[i]*Math.pow(10,digits))}catch(err){candidate_steps[0].push(nice_ticks[i]*Math.pow(10,digits))}
-				try{candidate_steps[3-digit_mod].push(nice_ticks[i]*Math.pow(10,digits-1))}catch(err){candidate_steps[0].push(nice_ticks[i]*Math.pow(10,digits-1))}
-				try{candidate_steps[1-digit_mod].push(nice_ticks[i]*Math.pow(10,digits+1))}catch(err){candidate_steps[0].push(nice_ticks[i]*Math.pow(10,digits+1))}
-	    	}
-
-	    }
-
-	    // generate an axis for each of the candidate step numbers
-	    for (var key in candidate_steps){
-			for (var i=0;i<candidate_steps[key].length;i++){
-		    	steps=parseFloat(candidate_steps[key][i])
-
-		    	// starting value depends on whether or not 0 is in the array
-		    	if(zero_flag==1){
-			    	min_steps=Math.ceil(Math.abs(mindata)/steps)
-			    	step_array=[(-min_steps*steps).toFixed(key)]		
-		    	} else {
-		    		step_array=[(Math.floor(mindata/steps)*steps).toFixed(key)]
-		    	}
+			// create step arrays. For dates, the lowest value should always be the first date so the line
+			// starts right away.
+			for (var i=0;i<candidate_steps.length;i++){
+		    	steps=parseInt(candidate_steps[i])
+		    	var temp=new Date(String(mindata.getUTCFullYear()))
+				step_array=[temp]
 
 		    	var stepnum=1
 			    while (step_array[step_array.length-1]<maxdata){
-			        step_array.push((parseFloat(step_array[0])+steps*stepnum).toFixed(key))
+			    	var temp=new Date(String(parseInt(step_array[0].getUTCFullYear())+steps*stepnum))
+			        step_array.push(temp)
 			        stepnum++
 			    }
 
 			    // this arbitrarily enforces step_arrays of length between 4 and 10
-			    if (step_array.length<11 && step_array.length>4){candidate_arrays.push(step_array)}
+			    if (step_array.length<11 && step_array.length>3){candidate_arrays.push(step_array)}
 		    }
 		}
-	}
-	if ((range/(ticks-1))<1){
-		// the above actually works until you get into ranges that are measured in hundredths,
-		// so eventually that should be fixed here.
-	}
 
-	// sort candidate_arrays by length (smallest first)
-	candidate_arrays.sort(function(a,b) {
-		return a.length-b.length
-	})
+		// if the range is more than 4 months but <4 years, the axis should be denominated in months
+		else if (range>=monthlength*4){
+			drange=maxdata.getUTCMonth()*maxdata.getUTCFullYear()-mindata.getUTCMonth()*mindata.getUTCFullYear()
+			digits=drange.toString().length
+			candidate_arrays=[]
+			candidate_steps=[]
+			nice_ticks=[.1,.2,.3,.4,.5,.6,.7,.8,.9,1]
 
-	// now evaluate all possibilities in the candidate_array
-	best_score=Number.POSITIVE_INFINITY
-	for (var i=0;i<candidate_arrays.length;i++){
-		candidate_range=parseFloat(candidate_arrays[i][candidate_arrays[i].length-1])-parseFloat(candidate_arrays[i][0])
-		wasted=(candidate_range-range)/candidate_range
+		    for (var i=0;i<nice_ticks.length;i++){
+				if(nice_ticks[i]*Math.pow(10,digits)>=1){candidate_steps.push(nice_ticks[i]*Math.pow(10,digits))}
+				if(nice_ticks[i]*Math.pow(10,digits-1)>=1){candidate_steps.push(nice_ticks[i]*Math.pow(10,digits-1))}
+				if(nice_ticks[i]*Math.pow(10,digits+1)>=1){candidate_steps.push(nice_ticks[i]*Math.pow(10,digits+1))}
+		    }
 
-		penalty=1
-		if(candidate_arrays[i].length>6){
-			penalty=1+.4*(candidate_arrays[i].length-6)
+			// create step arrays. For dates, the lowest value should always be the first date so the line
+			// starts right away.
+			for (var i=0;i<candidate_steps.length;i++){
+		    	steps=parseInt(candidate_steps[i])
+		    	var temp=new Date()
+		    	temp.setFullYear(mindata.getUTCFullYear())
+		    	temp.setMonth(mindata.getUTCMonth())
+				step_array=[temp]
+
+		    	var stepnum=1
+			    while (step_array[step_array.length-1]<maxdata){
+			    	var temp=new Date
+			    	temp.setFullYear(mindata.getUTCFullYear())
+			    	temp.setMonth(mindata.getUTCMonth()+stepnum)
+			        step_array.push(temp)
+			        stepnum++
+			    }
+
+			    // this arbitrarily enforces step_arrays of length between 4 and 10
+			    if (step_array.length<11 && step_array.length>3){candidate_arrays.push(step_array)}
+		    }
+		} 
+		// Otherwise the axis should be denominated in days. If it's too small than this, then it
+		// really shouldn't be a date at all - seconds or hours can just be counted. There is the edge
+		// case of tracking hours over more than one day and this may be a worthwhile future feature.
+		else {
+
 		}
 
-		score=Math.pow(10,wasted)*penalty
+		// sort candidate_arrays by length (smallest first)
+		candidate_arrays.sort(function(a,b) {
+			return a.length-b.length
+		})
 
-		if (score<best_score){
-			best_score=score
-			best_array=candidate_arrays[i]
+		// now evaluate all possibilities in the candidate_array
+		best_score=Number.POSITIVE_INFINITY
+		for (var i=0;i<candidate_arrays.length;i++){
+			candidate_range=candidate_arrays[i][candidate_arrays[i].length-1]-candidate_arrays[i][0]
+			wasted=(candidate_range-range)/candidate_range
+
+			penalty=1
+			if(candidate_arrays[i].length>6){
+				penalty=1+.2*(candidate_arrays[i].length-6)
+			}
+
+			score=Math.pow(10,wasted)*penalty
+
+			if (score<best_score){
+				best_score=score
+				best_array=candidate_arrays[i]
+			}
+
+			console.log('array: ',candidate_arrays[i],'score: ',score,'penalty: ',penalty)
 		}
 
-		console.log('array: ',candidate_arrays[i],'score: ',score,'penalty: ',penalty)
-	}
+		return best_array
+	} 
 
-	// add any text tweaks demanded by the parameters passed
-	for (var i=0;i<best_array.length;i++){
-		best_array[i]=prepend+best_array[i]+append
-	}
+	// if the dataseries is not type date
+	else {
 
-	return best_array
+		if(mindata>0 && mustincludezero==1) {
+			mindata=0
+		}
+
+		if(mindata<=0 && maxdata>=0){
+			zero_flag=1
+		}
+
+		range=maxdata-mindata
+		nice_ticks=[.1,.2,.5,1,.15,.25,.75]
+
+		// This is sort of a brute force method for finding a good division of the graph.
+		// First, generate a big list of candidate step values, make an axis for each one,
+		// and evaluate that axis by the amount of 'wasted space' it has. Give preference
+		// to nice numbers of ticks (I prefer about 5 but this can be set) - larger numbers
+		// of ticks will generally have an advantage is reducing wasted space, so penalize
+		// them by some arbitrary amount (another setting). Some of the candidate step
+		// numbers are gonna be garbage but hey, computation is cheap.
+
+		// The procedure is different if range <1 or >1 so these are handled separately.
+		console.log('range: ',range,'ticks: ',ticks,'maxdata: ',maxdata,'mindata: ',mindata)
+		if ((range/(ticks-1))>=0){
+		    steps=range/(ticks-1)
+		    
+		    if(steps>=1){
+			    rounded=Math.round(steps)
+			    digits=rounded.toString().length
+		    } else {
+		    	places=steps.toString().split('.')[1]
+		    	first_place=0
+		    	for(var i=0;i<places.length;i++){
+		    		if (places[i]!='0' && first_place==0){
+		    			first_place=i
+		    		}
+		    	}
+
+		    	digits=-parseInt(first_place)
+		    }
+
+		    candidate_steps={0:[],1:[],2:[],3:[],4:[],5:[],6:[],7:[],8:[],9:[],10:[]}
+		    candidate_arrays=[]
+
+		    // generate the candidate steps
+		    // this whole candidate_steps[5] thing is all about knowing where to truncate
+		    // numbers that have no exact binary representation. This seems like an incredibly
+		    // stupid way to do it and there must be another way but I'm not sure what it is.
+
+		    for (var i=0;i<nice_ticks.length;i++){
+		    	if (i<4){digit_mod=digits+1}else{digit_mod=digits}
+		    	if(digits>=3){
+					candidate_steps[0].push(nice_ticks[i]*Math.pow(10,digits))
+					candidate_steps[0].push(nice_ticks[i]*Math.pow(10,digits-1))
+					candidate_steps[0].push(nice_ticks[i]*Math.pow(10,digits+1))
+		    	}
+		    	if(digits==2){
+					candidate_steps[0].push(nice_ticks[i]*Math.pow(10,digits))
+					try{candidate_steps[digit_mod-1].push(nice_ticks[i]*Math.pow(10,digits-1))}catch(err){candidate_steps[0].push(nice_ticks[i]*Math.pow(10,digits-1))}
+					candidate_steps[0].push(nice_ticks[i]*Math.pow(10,digits+1))
+		    	}
+		    	if(digits<2){
+					try{candidate_steps[2-digit_mod].push(nice_ticks[i]*Math.pow(10,digits))}catch(err){candidate_steps[0].push(nice_ticks[i]*Math.pow(10,digits))}
+					try{candidate_steps[3-digit_mod].push(nice_ticks[i]*Math.pow(10,digits-1))}catch(err){candidate_steps[0].push(nice_ticks[i]*Math.pow(10,digits-1))}
+					try{candidate_steps[1-digit_mod].push(nice_ticks[i]*Math.pow(10,digits+1))}catch(err){candidate_steps[0].push(nice_ticks[i]*Math.pow(10,digits+1))}
+		    	}
+
+		    }
+
+		    // generate an axis for each of the candidate step numbers
+		    for (var key in candidate_steps){
+				for (var i=0;i<candidate_steps[key].length;i++){
+			    	steps=parseFloat(candidate_steps[key][i])
+
+			    	// starting value depends on whether or not 0 is in the array
+			    	if(zero_flag==1){
+				    	min_steps=Math.ceil(Math.abs(mindata)/steps)
+				    	step_array=[(-min_steps*steps).toFixed(key)]		
+			    	} else {
+			    		step_array=[(Math.floor(mindata/steps)*steps).toFixed(key)]
+			    	}
+
+			    	var stepnum=1
+				    while (step_array[step_array.length-1]<maxdata){
+				        step_array.push((parseFloat(step_array[0])+steps*stepnum).toFixed(key))
+				        stepnum++
+				    }
+
+				    // this arbitrarily enforces step_arrays of length between 4 and 10
+				    if (step_array.length<11 && step_array.length>4){candidate_arrays.push(step_array)}
+			    }
+			}
+		}
+		if ((range/(ticks-1))<1){
+			// the above actually works until you get into ranges that are measured in hundredths,
+			// so eventually that should be fixed here.
+		}
+
+		// sort candidate_arrays by length (smallest first)
+		candidate_arrays.sort(function(a,b) {
+			return a.length-b.length
+		})
+
+		// now evaluate all possibilities in the candidate_array
+		best_score=Number.POSITIVE_INFINITY
+		for (var i=0;i<candidate_arrays.length;i++){
+			candidate_range=parseFloat(candidate_arrays[i][candidate_arrays[i].length-1])-parseFloat(candidate_arrays[i][0])
+			wasted=(candidate_range-range)/candidate_range
+
+			penalty=1
+			if(candidate_arrays[i].length>6){
+				penalty=1+.4*(candidate_arrays[i].length-6)
+			}
+
+			score=Math.pow(10,wasted)*penalty
+
+			if (score<best_score){
+				best_score=score
+				best_array=candidate_arrays[i]
+			}
+
+			console.log('array: ',candidate_arrays[i],'score: ',score,'penalty: ',penalty)
+		}
+
+		// add any text tweaks demanded by the parameters passed
+		for (var i=0;i<best_array.length;i++){
+			best_array[i]=prepend+best_array[i]+append
+		}
+
+		return best_array
+	}
 }
 
 // Modified version of this very nice text wrapping function from stackoverflow @Thomas: 
@@ -1179,7 +1309,7 @@ function draw_axes(playobj,xvar,yvar,shiftx,shifty) {
 
 		lines=multitext(string,{ident:'xaxis','font-size':playobj.xtick_textsize,'font-weight':playobj.xlabel_textweight,'font-family':playobj.xlabel_textface,'dominant-baseline':'text-before-edge','text-anchor':'middle'},maxwidth)
 		for(var j=0;j<lines.length;j++){
-			if (parseInt(lines[j])>=1000 || parseInt(lines[j])<=-1000){linesj=commas(lines[j])} else{linesj=lines[j]}
+			if (Object.prototype.toString.call(xvar[i])!='[object Date]' && ((parseInt(lines[j])>=1000 || parseInt(lines[j])<=-1000))){linesj=commas(lines[j])} else{linesj=lines[j]}
 			var temp=snapobj.text(xstart_xcoord+(x_step/2)*shiftx+x_step*i,playobj.y+playobj.height-playobj.bottom_margin-playobj.logo_height-playobj.footer_toppad-playobj.footer_bottompad-xlab_height-playobj.xtick_to_xlabel-total_yoffset+playobj.xtick_to_xaxis+j*parseInt(playobj.xtick_textsize),linesj).attr({ident:'xaxis','font-size':playobj.xtick_textsize,'font-weight':playobj.xtick_textweight,'font-family':playobj.xtick_textface,'dominant-baseline':'text-before-edge','text-anchor':'middle'})
 			coords=temp.getBBox()
 			temp.attr({y:coords.y-coords.height})
@@ -1270,12 +1400,12 @@ function formatDate(date,range){
 	var monthlookup={0:'January',1:'February',2:'March',3:'April',4:'May',5:'June',6:'July',7:'August',8:'September',9:'October',10:'November',11:'December'}
 
 	if (range>=4*yearlength){
-		return(date.getFullYear().toString())
+		return(date.getUTCFullYear().toString())
 	}
 	if (range>=4*monthlength){
-		return(monthlookup[date.getMonth()]+' '+date.getFullYear())
+		return(monthlookup[date.getUTCMonth()]+' '+date.getUTCFullYear())
 	}
-	return(monthlookup[date.getMonth()]+' '+date.getDate()+', '+date.getFullYear())
+	return(monthlookup[date.getUTCMonth()]+' '+date.getUTCDate()+', '+date.getUTCFullYear())
 }
 
 
